--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,4 +11,6 @@ $text-white: $background;
 $max-width: 1200px;
 $min-width: 760px;
 $card-width: 340px;
-$card-height: 320px;
+$card-height: 324px;
+
+$border-radius: 6px;
