--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,17 +5,28 @@
   margin: 0;
   padding: 0 15px;
 
+  font-size: 16px;
   color: $text-white;
   
   background-color: $main-blue;
   border: none;
-  border-radius: 25px;
+  border-radius: $border-radius;
   box-shadow: 3px 3px 10px #0002;
   cursor: pointer;
+  transition: transform 200ms;
+
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 5px 5px 15px #0006;
+  }
 
   &--white {
     color: $text-black;
 
     background-color: $background;
+  }
+
+  &--fixed-width {
+    width: 130px;
   }
 }
