--- a/src/components/ConfirmPopUp/ConfirmPopUp.scss
+++ b/src/components/ConfirmPopUp/ConfirmPopUp.scss
@@ -2,8 +2,12 @@
 @import '../../styles/extends';
 
 .ConfirmPopUp {
+
   &__content {
     @extend %popup;
+
+    display: flex;
+    align-items: center;
   
     width: 300px;
     height: 300px;
