--- a/src/components/EditOrDelete/EditOrDelete.scss
+++ b/src/components/EditOrDelete/EditOrDelete.scss
@@ -1,8 +1,21 @@
 @import '../../styles/variables';
 
 .EditOrDelete {
+  position: relative;
+  bottom: 0;
+
   display: flex;
-  gap: 20px;
+  gap: 10px;
 
   justify-content: space-between;
+
+  opacity: 1;
+
+  transition: all 300ms;
+
+  &--hidden {
+    bottom: 60px;
+
+    opacity: 0;
+  }
 }
