--- a/src/components/EditPopUp/EditPopUp.scss
+++ b/src/components/EditPopUp/EditPopUp.scss
@@ -10,6 +10,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    opacity: 1;
+
+    transition: all 300ms;
+  
+
+    &--hidden {
+      top: 20%;
+      width: 50px;
+  
+      opacity: 0;
+    }
   }
 
   &__interface {
