--- a/src/components/PostCard/PostCard.scss
+++ b/src/components/PostCard/PostCard.scss
@@ -21,8 +21,17 @@
   }
 
   &__image {
+    position: relative;
+    z-index: 1;
+
     object-fit: cover;
     width: 300px;
     height: 200px;
+
+    transition: height 300ms;
+
+    &--tall {
+      height: 240px;
+    }
   }
 }
