--- a/src/components/ResultMessage/ResultMessage.scss
+++ b/src/components/ResultMessage/ResultMessage.scss
@@ -3,10 +3,15 @@
 .ResultMessage {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 50px;
 
   &__text {
     color: $success-green;
+
+    font-size: 32px;
+    font-weight: bold;
+    text-align: center;
 
     &--error {
       color: $error-red;
